--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Makers Course",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --write \"src/**/*.{js,jsx}\""
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/asanoviskhak/react-course-v1/issues"
   },
-  "homepage": "https://github.com/asanoviskhak/react-course-v1#readme"
+  "homepage": "https://github.com/asanoviskhak/react-course-v1#readme",
+  "devDependencies": {
+    "prettier": "^2.7.1"
+  }
 }
